--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "ts-node src/index.ts",
+    "nodemon": "nodemon",
+    "start:prod": "npm run build && node ./dist/src/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,22 @@
   "bugs": {
     "url": "https://github.com/bstefania/finance-tracker-backend/issues"
   },
-  "homepage": "https://github.com/bstefania/finance-tracker-backend#readme"
+  "homepage": "https://github.com/bstefania/finance-tracker-backend#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.14.0",
+    "nodemon": "^2.0.20",
+    "pg": "^8.9.0",
+    "typeorm": "^0.3.12",
+    "typescript": "^4.9.5"
+  }
 }
