--- a/.env.template
+++ b/.env.template
@@ -17,5 +17,5 @@ DB_HOST_TEST="127.0.0.1"
 DB_PORT_TEST="5432"
 DB_USERNAME_TEST="postgres"
 DB_PASSWORD_TEST="postgres"
-DB_NAME_TEST="mtrace-test"
+DB_NAME_TEST="db-test"
 DB_SSL_TEST="false"
