--- a/functions/package.json
+++ b/functions/package.json
@@ -20,10 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.20.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0",
-    "morgan": "^1.10.0",
-    "pg": "^8.9.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -36,6 +36,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.0.0",
+    "nodemon": "^2.0.22",
     "typeorm": "^0.3.12",
     "typescript": "^4.9.0"
   },
